Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26361

QML TextEdit uses too much CPU on Mac

XMLWordPrintable

    • macOS

      Run the attached QML file, and launch System Monitor. qmlscene takes around 20% CPU even while doing nothing (no cursor blinking, no nothing).

      This seems to be related to calling d->document->markContentsDirty() twice in QQuickTextEdit::updatePaintNode(). Commenting out those calls brings qmlscene's CPU load back to 0%. No weird behaviors have been observed, so maybe this is not needed anymore?

        1. test.qml
          1 kB
          Gabriel de Dietrich (drgvond)
        For Gerrit Dashboard: QTBUG-26361
        # Subject Branch Project Status CR V

            bodson Yann Bodson (Inactive)
            dedietri Gabriel de Dietrich (drgvond)
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes