Fix high CPU load for Qml TextEdit on Mac

This removes a Mac workaround which causes an endless calling loop
(updatePaintNode will call markContentsDirty will call updatePaintNode) for
every TextEdit element. The only reason that
this doesn't block the application is that the signal goes through the
GUI thread's event loop.

Task-number: QTBUG-26361
Change-Id: Ia89cc123959bbfdcbfc5b0707901ac91dec47c40
Reviewed-by: Jiang Jiang <jiang.jiang@nokia.com>